--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,6 @@ jobs:
               curl \
               -X POST \
               -H "Accept: application/vnd.github.v3+json" \
-              -H "Authorization: token ${{ secrets.$AUTODEPLOY_TOKEN }}" \
+              -H "Authorization: token ${{ secrets.AUTODEPLOY_TOKEN }}" \
               https://api.github.com/repos/USGS-Astrogeology/FoundationalDataProducts_Website/dispatches \
               -d '{"event_type":"automated_deploy"}'
